# MyFirstProject

./: .gitignore
Plug/plugconf/: bash_profile.default  bashrc.conf  tmux.conf  vimrc.conf
lib/include/: bfd.h  luaconf.h
lib/include/boost/: lexical_cast.hpp
lib/include/boost/mpi/: datatype.hpp
lib/include/clang/Config/: config.h
lib/include/dbser/: Cfunc_route_base.h  Cfunc_route_cmd.h  Cfunc_route_cmd_v2.h  Cfunc_route_db_v2.h  Citem_change_log.h  Ctable.h  CtableRoute1x1.h  db_macro.h  mysql_iface.h  proxy_dll_interface.h
lib/include/libtaomee++/memory/: mempool.hpp
lib/include/libtaomee++/proto/: Ccmd_map.h  Cnew_timer_base.hpp  Creload_cmsg.h  proto_base.h  proto_client.h  proto_xml.h
lib/include/libtaomee++/utils/: strings.hpp  tcpip.h  version_str.hpp
lib/include/libtaomee/tm_dirty/: acsm.h
lib/include/linux/: version.h
lib/include/llvm/Config/: config-64.h  llvm-config-64.h
lib/include/mysql/: my_config_x86_64.h  mysql_version.h
lib/include/node/: config.gypi
lib/include/php/main/: build-defs.h  php_config.h
lib/include/readline/: readline.h
lib/include/ruby/: config-x86_64.h
lib/include/tcl-private/generic/: tclInt.h  tclPort.h
lib/include/tcl-private/unix/: tclDTrace.h
lib/local/include/krdb/: rdb.h  rdb_factory.h
lib/local/include/mbedtls/: aes.h  aria.h  bignum.h  blowfish.h  bn_mul.h  camellia.h  ccm.h  chacha20.h  check_config.h  cipher.h  config.h  ctr_drbg.h  dhm.h  ecdh.h  ecdsa.h  ecp.h  error.h  gcm.h  hmac_drbg.h  pk.h  platform_util.h  poly1305.h  rsa.h  sha1.h  sha256.h  sha512.h  ssl.h  version.h  x509_crt.h
lib/local/lib/: libhiredis.so.0.13  libprotobuf-lite.so.10.0.0  librdkafka.so.1
lib/local/lib/pkgconfig/: protobuf.pc  rdkafka.pc
main/src/: Astar.cpp  CMakeLists.txt  INSTALL  TestA.cpp  TestA.h  main.cpp
main/src/Design/: AbstractFactory.cpp  AbstractFactory.h  AdapterPattern.h  DecoratorPattern.h  Factory.cpp  Factory.h  Singleton.h
main/src/algorithm/: test_fun.cpp  test_fun.h
main/src/db/: CTable.cpp  CTable.h  CTableRoute100x10.cpp  CTableRoute100x10.h  CTableRoute100x100.cpp  CTableRoute100x100.h  table_connect.cpp  table_connect.h
main/src/logic/: CurlCommon.cpp  CurlCommon.h  KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  md5.cpp  pthread.cpp
main/src/login_auth/: README.txt  SHA1.cpp  auto_procs.cpp  auto_procs.h  http_client_thread.cpp  source_config.cpp  source_word.cpp
main/src/share/: common.h
main/src/socket/: Socket.cpp  Socket.h
main/src/user/: GameMap.h  InputControl.h  TestB.h
proto/: Makefile
proto/test/define/: Makefile  test.proto
pytool/: changename.py  checkwish2.py  chownNewActivityId.py  mergeserver.py  resetrecharge.py  resetworld.py
pytool/base/: database.py  logtest.py  redisClient.py  utility.py
server/: .gitignore
server/cache/conf/: bench.conf.default  bind.conf.default
server/cache/src/: CMakeLists.txt  README  conn_manager.cpp  global_data.h  proto_processor.h  server.cpp  service.h  startup.sh  timer_procs.cpp  timer_procs.h
server/cache/src/cmake/: Findstatlogger64bit.cmake
server/cache/src/etc/: uid.xml
server/cache/src/global_data/: global_data.cpp
server/cache/src/logic/: RedisClient.cpp  RedisClient.hpp  key_define.h  msg_processor.cpp  msg_processor.h  redis_service.cpp  redis_service.h  utils.cpp  utils.h
server/db/: .gitignore
server/db/conf/: bind.conf.default
server/db/src/: CMakeLists.txt  INSTALL  INSTALL_USE_DISTCC  global_data.cpp  global_data.h  proto_processor.cpp  server.cpp
server/db/src/etc/: tables.xml
server/db/src/logic/: msg_processor.cpp
server/dbtest/conf/: bench.conf.default
server/dbtest/src/: CMakeLists.txt  cmd_processor_interface.h  global_data.cpp  global_data.h  isg2_db  proto_processor.cpp  proto_processor.h  server.cpp  server.h  startup.sh
server/dbtest/src/logic/: msg_processor.cpp  msg_processor.h
server/dbtest/src/logic/mysql/: Ctable.cpp  Ctable.h  CtableRoute.cpp  CtableRoute.h  CtableRoute100x10.cpp  CtableRoute100x10.h  CtableRoute100x100.cpp  CtableRoute100x100.h  DBConn.cpp  DBConn.h  db_macro.h
server/dbtest/src/logic/tables/: testy.cpp  testy.h  user_attr.cpp  user_attr.h  user_info.cpp  user_info.h
server/login_auth/: HMAC_SHA1.cpp  Makefile  base64.cpp  base64.h  http_client_thread.h  login_auth_manager.cpp  login_auth_manager.h  source_config.h  source_word.h
server/module/: .gitignore
server/module/src/: CMakeLists.txt  conn_manager.cpp  conn_manager.h  global_data.h  proto_processor.cpp  server.h  service.cpp  startup.sh
server/module/src/cmake/: Findglib.cmake
server/module/tool/reload_conf/: Makefile  commom.h  reload_conf.cc  reload_conf.conf  reload_conf.h  (+1 more)
server/online/src/: CMakeLists.txt  conn_manager.cpp  global_data.cpp  server.cpp  service.cpp  startup.sh
server/proto/: Makefile
server/proto/battle/: battle.pb.cc  battle.pb.d  battle.pb.h
server/proto/cache/: cache.pb.cc  cache.pb.d  cache.pb.h
server/proto/db/: db.pb.cc  db.pb.d  db.pb.h
server/proto/gate/: gate.pb.cc  gate.pb.d  gate.pb.h
server/proto/login/: login.pb.cc  login.pb.h
server/proto/online/: online.pb.cc  online.pb.d  online.pb.h
server/proto/position/: position.pb.cc  position.pb.d  position.pb.h
server/proto/share/: common_enum.pb.cc  common_enum.pb.d  common_enum.pb.h  share.pb.cc  share.pb.d  share.pb.h
server/proto/switch/: switch.pb.cc  switch.pb.d  switch.pb.h
server/proxy/: .gitignore  bench.lua.default  isg2_proxy  route.xml.default  rpro  startup.sh
server/share/: .gitignore  README
server/share/config/: err.h  push_cmd.cpp  push_cmd.h  size_df.h
server/share/logic/: HostIpsConfigFile.cpp  HostIpsConfigFile.h  ShareConst.h  Troop.h  chat_record.cpp  chat_record.h  proto_queue.h  share_fun.h  share_utility.h
server/share/module/: cmd_processor_interface.h  common.h  proto.h  singleton.h  xmlutils.h
server/share/tool/: EncodeDecode.cpp  EncodeDecode.h  id_utility.cpp  id_utility.h  macros.h  md5.h  md5_util.cpp  md5_util.h  time_utils.cpp  time_utils.h
test/: main.lua  test1.lua  test2.lua
test/base/: import.lua
(+53 files in other folders)
